Added jQuery and Popper, ongoing work on 'Team' page

--- a/templates/team.html
+++ b/templates/team.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <script src="../static/jquery-3.3.1.min.js"></script>
+    <script src="../static/popper.min.js"></script>
 </head>
 <body>
 <div>
@@ -40,9 +42,9 @@
     </nav>
 </div>
 <section>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="meetDiv">
                     <div class="meetCenter">
                         Meet<br>
@@ -50,16 +52,101 @@
                         Team
                     </div>
                 </div>
+                <div class="meetDivSmall">
+                    <div class="meetCenterSmall">
+                        Meet the Team
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-6">
-                    <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
-                        <div class="img-container">
-                            <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                <div class="creativeMindsDiv">
+                    <div class="creativeMindsCenter">
+                        <div id="background">
+                            <p id="bg-text">
+                                Our<br>
+                                Creative<br>
+                                Minds
+                            </p>
                         </div>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 memberType">
+                        Adviser ____
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                        <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
+                            <div class="img-container">
+                                <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Dr. Aman Parnami</h5>
+                                <p class="card-text">Wearable Computing, Rapid Prototyping Tools, Input and
+                                    Interactions,
+                                    Maker and Design Education</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 memberType">
+                        PHDs ____
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card border-light" style="width: 18rem; text-align: center;">
+                                    <div class="img-container">
+                                        <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title">Manideepa Mukherjee</h5>
+                                        <p class="card-text">Sensor Design, E-Textile</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
+                                    <div class="img-container">
+                                        <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title">Manshul V. Belani</h5>
+                                        <p class="card-text">HCI, Assistive Technologies, Inclusive Design</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
+                                    <div class="img-container">
+                                        <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up
+                                            the
+                                            bulk
+                                            of the card's content.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
+                                    <div class="img-container">
+                                        <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up
+                                            the
+                                            bulk
+                                            of the card's content.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
