--- a/static/style.css
+++ b/static/style.css
@@ -5,14 +5,42 @@
 }
 
 .img-container {
-  height:251px;
-  width:251px;
+  height:200px;
+  width:200px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+}
+
+.memberType{
+  margin-top: 10.5rem;
+  font-size: 1.5rem;
+}
+
+#background{
+  position:absolute;
+  z-index:0;
+  background:white;
+  display:block;
+  min-height:50%;
+  min-width:50%;
+  color:yellow;
+}
+
+#bg-text
+{
+  color:rgba(0,0,0,0.05);
+  font-size:120px;
 }
 
 .thumbnail {
   width:100%;
   height:100%;
   object-fit:cover;
+}
+
+.card {
+  background-color: rgba(245, 245, 245, 0) !important;
 }
 
 .navbar {
@@ -47,21 +75,175 @@
   bottom: 0px;
   top: 0px;
   left: 0;
-  position: absolute;
+  position: fixed;
+  visibility: visible;
 }
 
 .meetCenter {
-  position: absolute;
+  position: fixed;
   width: 100px;
   height: 50px;
-  top: 50%;
-  left: 50%;
+  top: 40%;
+  left: 15%;
   margin-left: -50px; /* margin is -0.5 * dimension */
   margin-top: -25px;
   color: #F5A623;
-  font-size: 126px;
+  line-height: 102px;
+  font-size: 100px;
+  visibility: visible;
+}
+
+.meetCenterSmall {
+  visibility: hidden;
+}
+
+.meetDivSmall {
+  visibility: hidden;
+}
+
+ .creativeMindsDiv {
+   font-family: 'Playfair Display', serif;
+   width: 100%;
+   height: auto;
+   bottom: 0px;
+   top: 0px;
+   right: 0;
+   position: fixed;
+ }
+
+.creativeMindsCenter {
+  position: fixed;
+  width: 100px;
+  height: 50px;
+  top: 30%;
+  right: 40%;
+  margin-left: -50px; /* margin is -0.5 * dimension */
+  margin-top: -25px;
+  color: #F5A623;
+  line-height: 7rem;
+  font-size: 2rem;
 }​
 
+@media (max-width: 576px) {
+
+
+  /*.creativeMindsDiv {*/
+    /*font-family: 'Playfair Display', serif;*/
+    /*width: 100%;*/
+    /*height: auto;*/
+    /*bottom: 0px;*/
+    /*top: 0px;*/
+    /*right: 0;*/
+    /*position: fixed;*/
+  /*}*/
+
+  /*.creativeMindsCenter {*/
+    /*position: fixed;*/
+    /*width: 100px;*/
+    /*height: 50px;*/
+    /*top: 30%;*/
+    /*right: 40%;*/
+    /*margin-left: -50px; !* margin is -0.5 * dimension *!*/
+    /*margin-top: -25px;*/
+    /*color: #F5A623;*/
+    /*line-height: 127px;*/
+    /*font-size: 63px;*/
+  /*}​*/
+
+
+}
+
+@media (max-width: 768px) {
+
+  .meetDiv {
+    font-family: 'Playfair Display', serif;
+    width: 100%;
+    height: auto;
+    bottom: 0px;
+    top: 0px;
+    left: 0;
+    position: fixed;
+    visibility: hidden;
+  }
+
+  .meetCenter {
+    position: fixed;
+    width: 100px;
+    height: 50px;
+    top: 30%;
+    left: 10%;
+    margin-left: -50px; /* margin is -0.5 * dimension */
+    margin-top: -25px;
+    color: #F5A623;
+    line-height: 63px;
+    font-size: 65px;
+    visibility: hidden;
+  }
+
+  .meetDivSmall {
+    visibility: visible;
+    font-family: 'Playfair Display', serif;
+    width: 100%;
+    height: auto;
+  }
+
+  .meetCenterSmall {
+    visibility: visible;
+    margin-top: 10px;
+    color: #F5A623;
+    line-height: 25px;
+    font-size: 30px;
+  }
+
+  .creativeMindsDiv {
+    font-family: 'Playfair Display', serif;
+    width: 100%;
+    /*height: auto;*/
+    bottom: 0px;
+    top: 0px;
+    right: 0;
+    position: fixed;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+  }
+
+  .creativeMindsCenter {
+    position: fixed;
+    /*width: 100px;*/
+    /*height: 50px;*/
+    /*top: 50%;*/
+    left: 10%;
+    /*right: 50%;*/
+    /*margin-left: -50px; !* margin is -0.5 * dimension *!*/
+    /*margin-top: -25px;*/
+    color: #F5A623;
+    line-height: 100px;
+    /*font-size: 5px;*/
+  }​
+
+  #bg-text
+  {
+    color:rgba(0,0,0,0.05);
+    font-size:2px;
+  }
+
+  #background{
+    position:absolute;
+    z-index:0;
+    background:white;
+    display:block;
+    min-height:5%;
+    min-width:5%;
+    color:yellow;
+  }
+
+}
+
+@media (max-width: 1200px) and (min-width: 768.1px) {
+
+}
 
 @media (min-width: 768px) {
   .navbar-nav > li > a {
@@ -70,6 +252,29 @@
     padding-bottom: 26.5px;
     line-height: 27px;
   }
+
+  /*.meetDiv {*/
+    /*font-family: 'Playfair Display', serif;*/
+    /*width: 100%;*/
+    /*height: auto;*/
+    /*bottom: 0px;*/
+    /*top: 0px;*/
+    /*left: 0;*/
+    /*position: fixed;*/
+  /*}*/
+
+  /*.meetCenter {*/
+    /*position: fixed;*/
+    /*width: 100px;*/
+    /*height: 50px;*/
+    /*top: 30%;*/
+    /*left: 50%;*/
+    /*margin-left: -50px; !* margin is -0.5 * dimension *!*/
+    /*margin-top: -25px;*/
+    /*color: #F5A623;*/
+    /*line-height: 128px;*/
+    /*font-size: 126px;*/
+  /*}​*/
 }
 
 
