--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,6 @@
 #background{
   position:absolute;
   z-index:0;
-  background:white;
   display:block;
   min-height:50%;
   min-width:50%;
@@ -101,15 +100,15 @@
   visibility: hidden;
 }
 
- .creativeMindsDiv {
-   font-family: 'Playfair Display', serif;
-   width: 100%;
-   height: auto;
-   bottom: 0px;
-   top: 0px;
-   right: 0;
-   position: fixed;
- }
+.creativeMindsDiv {
+  font-family: 'Playfair Display', serif;
+  width: 100%;
+  height: auto;
+  /*bottom: 0px;*/
+  top: 0px;
+  right: 0;
+  position: fixed;
+}
 
 .creativeMindsCenter {
   position: fixed;
@@ -121,7 +120,7 @@
   margin-top: -25px;
   color: #F5A623;
   line-height: 7rem;
-  font-size: 2rem;
+  /*font-size: 2rem;*/
 }​
 
 @media (max-width: 576px) {
@@ -199,7 +198,7 @@
     font-family: 'Playfair Display', serif;
     width: 100%;
     /*height: auto;*/
-    bottom: 0px;
+    /*bottom: 0px;*/
     top: 0px;
     right: 0;
     position: fixed;
@@ -226,16 +225,15 @@
   #bg-text
   {
     color:rgba(0,0,0,0.05);
-    font-size:2px;
+    font-size: 20px;
   }
 
   #background{
     position:absolute;
     z-index:0;
-    background:white;
     display:block;
-    min-height:5%;
-    min-width:5%;
+    min-height:50%;
+    min-width:50%;
     color:yellow;
   }
 
