Pre-final 'Team page'
- Added Lato font to the Team page.
- Fixed the 'Our Creative Minds' font and spacing error that arose before.
- Removed unnecessary non-sense code added before to make 'Our Creative Minds' in the background.

Yet to add:
- Media queries for 576px

--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,10 @@
   margin-top: -23px;
 }
 
+.centering{
+  text-align: center;
+}
+
 .img-container {
   height:200px;
   width:200px;
@@ -15,21 +19,6 @@
 .memberType{
   margin-top: 10.5rem;
   font-size: 1.5rem;
-}
-
-#background{
-  position:absolute;
-  z-index:0;
-  display:block;
-  min-height:50%;
-  min-width:50%;
-  color:yellow;
-}
-
-#bg-text
-{
-  color:rgba(0,0,0,0.05);
-  font-size:120px;
 }
 
 .thumbnail {
@@ -101,13 +90,17 @@
 }
 
 .creativeMindsDiv {
-  font-family: 'Playfair Display', serif;
   width: 100%;
   height: auto;
   /*bottom: 0px;*/
   top: 0px;
   right: 0;
-  position: fixed;
+  position:absolute;
+  z-index:0;
+  display:block;
+  min-height:50%;
+  min-width:50%;
+  color:yellow;
 }
 
 .creativeMindsCenter {
@@ -118,8 +111,11 @@
   right: 40%;
   margin-left: -50px; /* margin is -0.5 * dimension */
   margin-top: -25px;
-  color: #F5A623;
+  /*color: #F5A623;*/
   line-height: 7rem;
+  font-family: 'Lato', sans-serif;
+  color:rgba(0,0,0,0.05);
+  font-size:8rem;
   /*font-size: 2rem;*/
 }​
 
@@ -195,13 +191,17 @@
   }
 
   .creativeMindsDiv {
-    font-family: 'Playfair Display', serif;
     width: 100%;
-    /*height: auto;*/
+    height: auto;
     /*bottom: 0px;*/
     top: 0px;
     right: 0;
-    position: fixed;
+    position:absolute;
+    z-index:0;
+    display:block;
+    min-height:50%;
+    min-width:50%;
+    color:yellow;
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
@@ -210,32 +210,19 @@
 
   .creativeMindsCenter {
     position: fixed;
-    /*width: 100px;*/
-    /*height: 50px;*/
-    /*top: 50%;*/
-    left: 10%;
-    /*right: 50%;*/
-    /*margin-left: -50px; !* margin is -0.5 * dimension *!*/
-    /*margin-top: -25px;*/
-    color: #F5A623;
-    line-height: 100px;
-    /*font-size: 5px;*/
-  }​
-
-  #bg-text
-  {
+    width: 100px;
+    height: 50px;
+    top: 50%;
+    left: 30%;
+    margin-left: -50px; /* margin is -0.5 * dimension */
+    margin-top: -25px;
+    /*color: #F5A623;*/
+    line-height: 4.5rem;
+    font-family: 'Lato', sans-serif;
     color:rgba(0,0,0,0.05);
-    font-size: 20px;
-  }
-
-  #background{
-    position:absolute;
-    z-index:0;
-    display:block;
-    min-height:50%;
-    min-width:50%;
-    color:yellow;
-  }
+    font-size:80px;
+    /*font-size: 2rem;*/
+  }​
 
 }
 
