--- a/templates/team.html
+++ b/templates/team.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
 </head>
@@ -61,20 +62,16 @@
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                 <div class="creativeMindsDiv">
                     <div class="creativeMindsCenter">
-                        <div id="background">
-                            <p id="bg-text">
-                                Our<br>
-                                Creative<br>
-                                Minds
-                            </p>
-                        </div>
+                        Our<br>
+                        Creative<br>
+                        Minds
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 memberType">
                         Adviser ____
                     </div>
-                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 centering">
                         <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
                             <div class="img-container">
                                 <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
@@ -90,7 +87,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 memberType">
-                        PHDs ____
+                        PHDs
+                    <hr style="border-color: #F5A623;">
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                         <div class="row">
