--- a/static/style.css
+++ b/static/style.css
@@ -4,36 +4,10 @@
   margin-top: -23px;
 }
 
-.centering{
-  text-align: center;
-}
-
-.img-container {
-  height:200px;
-  width:200px;
-  text-align: center;
-  display: block;
-  margin: 0 auto;
-}
-
-.memberType{
-  margin-top: 10.5rem;
-  font-size: 1.5rem;
-}
-
-.thumbnail {
-  width:100%;
-  height:100%;
-  object-fit:cover;
-}
-
-.card {
-  background-color: rgba(245, 245, 245, 0) !important;
-}
-
 .navbar {
   min-height: 100px;
   margin-top: 17px;
+  z-index: 1;
 }
 
 .navbar-brand {
@@ -43,7 +17,7 @@
   margin-top: 17px;
 }
 
-.nav-item{
+.nav-item {
   width: 100px;
   font-family: 'Lato', sans-serif;
 }
@@ -55,6 +29,52 @@
 }
 
 /* -------- Team page -------- */
+
+
+.centering {
+  text-align: center;
+}
+
+.img-container {
+  height:200px;
+  width:200px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+}
+
+.memberType {
+  margin-top: 9rem;
+  font-size: 1.5rem;
+  font-family: 'Lato', sans-serif;
+}
+
+.thumbnail {
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+
+.card {
+  background-color: rgba(245, 245, 245, 0) !important;
+  border: none !important;
+  width: 18rem;
+  text-align: center;
+  align: center;
+}
+
+.memberName {
+  margin-top:-10px;
+  font-family: 'Lato', sans-serif;
+}
+
+.memberField {
+  margin-top: -13px;
+  font-family: 'Lato', sans-serif;
+  line-height: 18px;
+  padding-bottom: 25px;
+}
+
 
 .meetDiv {
   font-family: 'Playfair Display', serif;
@@ -71,8 +91,8 @@
   position: fixed;
   width: 100px;
   height: 50px;
-  top: 40%;
-  left: 15%;
+  top: 30%;
+  left: 10%;
   margin-left: -50px; /* margin is -0.5 * dimension */
   margin-top: -25px;
   color: #F5A623;
@@ -91,6 +111,7 @@
 
 .creativeMindsDiv {
   width: 100%;
+  /*text-align: center;*/
   height: auto;
   /*bottom: 0px;*/
   top: 0px;
@@ -101,14 +122,20 @@
   min-height:50%;
   min-width:50%;
   color:yellow;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+
 }
 
 .creativeMindsCenter {
+  /*display: block;*/
   position: fixed;
-  width: 100px;
+  /*width: 10rem;*/
   height: 50px;
   top: 30%;
-  right: 40%;
+  right: 20%;
   margin-left: -50px; /* margin is -0.5 * dimension */
   margin-top: -25px;
   /*color: #F5A623;*/
@@ -116,37 +143,104 @@
   font-family: 'Lato', sans-serif;
   color:rgba(0,0,0,0.05);
   font-size:8rem;
+  text-align: center;
   /*font-size: 2rem;*/
 }​
 
+/*  ========  MAX-WIDTH 576px ======= */
+
 @media (max-width: 576px) {
 
+  #postTypeLine{
+    visibility: hidden;
+  }
 
-  /*.creativeMindsDiv {*/
-    /*font-family: 'Playfair Display', serif;*/
-    /*width: 100%;*/
-    /*height: auto;*/
+  .meetDiv {
+    font-family: 'Playfair Display', serif;
+    width: 100%;
+    height: auto;
+    bottom: 0px;
+    top: 0px;
+    left: 0;
+    position: fixed;
+    visibility: visible;
+  }
+
+  .meetCenter {
+    position: fixed;
+    width: 100px;
+    height: 50px;
+    top: 30%;
+    left: 10%;
+    margin-left: -50px; /* margin is -0.5 * dimension */
+    margin-top: -25px;
+    color: #F5A623;
+    line-height: 63px;
+    font-size: 65px;
+    visibility: visible;
+  }
+
+  .meetDivSmall {
+    visibility: hidden;
+    font-family: 'Playfair Display', serif;
+    width: 100%;
+    height: auto;
+    text-align: center;
+
+  }
+
+  .meetCenterSmall {
+    visibility: hidden;
+    margin-top: 10px;
+    color: #F5A623;
+    line-height: 25px;
+    font-size: 30px;
+    /*margin: 0 auto;*/
+  }
+
+  .creativeMindsDiv {
+    width: 100%;
+    height: auto;
     /*bottom: 0px;*/
-    /*top: 0px;*/
-    /*right: 0;*/
-    /*position: fixed;*/
-  /*}*/
 
-  /*.creativeMindsCenter {*/
-    /*position: fixed;*/
+    top: 0px;
+    right: 0;
+    position:absolute;
+    z-index:0;
+    display:block;
+    min-height:50%;
+    min-width:50%;
+    color:yellow;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+  }
+
+  .creativeMindsCenter {
+    position: fixed;
     /*width: 100px;*/
-    /*height: 50px;*/
-    /*top: 30%;*/
-    /*right: 40%;*/
-    /*margin-left: -50px; !* margin is -0.5 * dimension *!*/
-    /*margin-top: -25px;*/
+    height: 50px;
+    top: 40%;
+    text-align: center;
+    /*display: inline;*/
+    left: 30px%;
+    margin: 0 auto;
+    margin-left: -50px; /* margin is -0.5 * dimension */
+    margin-top: -25px;
     /*color: #F5A623;*/
-    /*line-height: 127px;*/
-    /*font-size: 63px;*/
-  /*}​*/
+    line-height: 4.5rem;
+    font-family: 'Lato', sans-serif;
+    color: rgba(0,0,0,0.05);
+    font-size:80px;
+    /*font-size: 2rem;*/
+  }​
+
 
 
 }
+
+/*  ========  MAX-WIDTH 768px ======= */
 
 @media (max-width: 768px) {
 
@@ -160,6 +254,7 @@
     position: fixed;
     visibility: hidden;
   }
+
 
   .meetCenter {
     position: fixed;
@@ -180,6 +275,8 @@
     font-family: 'Playfair Display', serif;
     width: 100%;
     height: auto;
+    text-align: center;
+
   }
 
   .meetCenterSmall {
@@ -188,12 +285,14 @@
     color: #F5A623;
     line-height: 25px;
     font-size: 30px;
+    /*margin: 0 auto;*/
   }
 
   .creativeMindsDiv {
     width: 100%;
     height: auto;
     /*bottom: 0px;*/
+
     top: 0px;
     right: 0;
     position:absolute;
@@ -210,10 +309,13 @@
 
   .creativeMindsCenter {
     position: fixed;
-    width: 100px;
+    /*width: 100px;*/
     height: 50px;
-    top: 50%;
-    left: 30%;
+    top: 40%;
+    text-align: center;
+    /*display: inline;*/
+    left: 25%;
+    margin: 0 auto;
     margin-left: -50px; /* margin is -0.5 * dimension */
     margin-top: -25px;
     /*color: #F5A623;*/
@@ -226,9 +328,95 @@
 
 }
 
+/*  ========  MAX-WIDTH 1200px AND MIN-WIDTH 768.1px ======= */
+
 @media (max-width: 1200px) and (min-width: 768.1px) {
 
+  .meetDiv {
+    font-family: 'Playfair Display', serif;
+    width: 100%;
+    height: auto;
+    bottom: 0px;
+    top: 0px;
+    left: 0;
+    position: fixed;
+    visibility: visible;
+  }
+
+  .meetCenter {
+    position: fixed;
+    width: 100px;
+    height: 50px;
+    top: 30%;
+    left: 10%;
+    margin-left: -50px; /* margin is -0.5 * dimension */
+    margin-top: -25px;
+    color: #F5A623;
+    line-height: 63px;
+    font-size: 65px;
+    visibility: visible;
+  }
+
+  .meetDivSmall {
+    visibility: hidden;
+    font-family: 'Playfair Display', serif;
+    width: 100%;
+    height: auto;
+    text-align: center;
+
+  }
+
+  .meetCenterSmall {
+    visibility: hidden;
+    margin-top: 10px;
+    color: #F5A623;
+    line-height: 25px;
+    font-size: 30px;
+    /*margin: 0 auto;*/
+  }
+
+  .creativeMindsDiv {
+    width: 100%;
+    height: auto;
+    /*bottom: 0px;*/
+
+    top: 0px;
+    right: 0;
+    position:absolute;
+    z-index:0;
+    display:block;
+    min-height:50%;
+    min-width:50%;
+    color:yellow;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+  }
+
+  .creativeMindsCenter {
+    position: fixed;
+    /*width: 100px;*/
+    height: 50px;
+    top: 40%;
+    text-align: center;
+    /*display: inline;*/
+    left: 30px%;
+    margin: 0 auto;
+    margin-left: -50px; /* margin is -0.5 * dimension */
+    margin-top: -25px;
+    /*color: #F5A623;*/
+    line-height: 4.5rem;
+    font-family: 'Lato', sans-serif;
+    color:rgba(0,0,0,0.05);
+    font-size:80px;
+    /*font-size: 2rem;*/
+  }​
+
+
+
 }
+
 
 @media (min-width: 768px) {
   .navbar-nav > li > a {
@@ -237,29 +425,6 @@
     padding-bottom: 26.5px;
     line-height: 27px;
   }
-
-  /*.meetDiv {*/
-    /*font-family: 'Playfair Display', serif;*/
-    /*width: 100%;*/
-    /*height: auto;*/
-    /*bottom: 0px;*/
-    /*top: 0px;*/
-    /*left: 0;*/
-    /*position: fixed;*/
-  /*}*/
-
-  /*.meetCenter {*/
-    /*position: fixed;*/
-    /*width: 100px;*/
-    /*height: 50px;*/
-    /*top: 30%;*/
-    /*left: 50%;*/
-    /*margin-left: -50px; !* margin is -0.5 * dimension *!*/
-    /*margin-top: -25px;*/
-    /*color: #F5A623;*/
-    /*line-height: 128px;*/
-    /*font-size: 126px;*/
-  /*}​*/
 }
 
 
