--- a/templates/team.html
+++ b/templates/team.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
 </head>
@@ -45,7 +45,7 @@
 <section>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                 <div class="meetDiv">
                     <div class="meetCenter">
                         Meet<br>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" style="text-align:center;">
                 <div class="creativeMindsDiv">
                     <div class="creativeMindsCenter">
                         Our<br>
@@ -68,17 +68,17 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 memberType">
-                        Adviser ____
+                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
+                        Adviser <hr style="border-color: #F5A623;">
                     </div>
-                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 centering">
-                        <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
+                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 centering">
+                        <div class="card" style="width: 18rem; text-align: center; align: center;">
                             <div class="img-container">
                                 <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Dr. Aman Parnami</h5>
-                                <p class="card-text">Wearable Computing, Rapid Prototyping Tools, Input and
+                                <h5 class="card-title memberName"><b>Dr. Aman Parnami</b></h5>
+                                <p class="card-text memberField">Wearable Computing, Rapid Prototyping Tools, Input and
                                     Interactions,
                                     Maker and Design Education</p>
                             </div>
@@ -86,59 +86,77 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 memberType">
+                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
                         PHDs
-                    <hr style="border-color: #F5A623;">
+                        <hr style="border-color: #F5A623;">
                     </div>
-                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
                         <div class="row">
-                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card border-light" style="width: 18rem; text-align: center;">
+                            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card" style="width: 18rem; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title">Manideepa Mukherjee</h5>
-                                        <p class="card-text">Sensor Design, E-Textile</p>
+                                        <h5 class="card-title memberName"><b>Manideepa Mukherjee</b></h5>
+                                        <p class="card-text memberField">Sensor Design, E-Textile</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
+                            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card" style="width: 18rem; text-align: center; align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title">Manshul V. Belani</h5>
-                                        <p class="card-text">HCI, Assistive Technologies, Inclusive Design</p>
+                                        <h5 class="card-title memberName"><b>Manshul V. Belani</b></h5>
+                                        <p class="card-text memberField">HCI, Assistive Technologies, Inclusive
+                                            Design</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
+                        Research Assistants (RA)
+                        <hr style="border-color: #F5A623;">
+                    </div>
+                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+                        <div class="row">
+                            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card" style="width: 18rem; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up
-                                            the
-                                            bulk
-                                            of the card's content.</p>
+                                        <h5 class="card-title memberName"><b>Deepak Aggrawal</b></h5>
+                                        <p class="card-text memberField">Interaction Design, Gestures, AR</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card" style="width: 18rem; text-align: center; align: center;">
+                                    <div class="img-container">
+                                        <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title memberName"><b>Jatin Arora</b></h5>
+                                        <p class="card-text memberField">HCI, Construction Toolkits, Novel Input
+                                            Modalities</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                <div class="card border-light" style="width: 18rem; text-align: center; align: center;">
+                            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card" style="width: 18rem; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up
-                                            the
-                                            bulk
-                                            of the card's content.</p>
+                                        <h5 class="card-title memberName"><b>Piyush Kumar</b></h5>
+                                        <p class="card-text memberField">VR/ AR/ MR along with Wearable Technologies</p>
                                     </div>
                                 </div>
                             </div>
