--- a/templates/team.html
+++ b/templates/team.html
@@ -69,18 +69,24 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
-                        Adviser <hr style="border-color: #F5A623;">
+                        Adviser
+                        <hr style="border-color: #F5A623;">
                     </div>
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 centering">
-                        <div class="card" style="width: 18rem; text-align: center; align: center;">
-                            <div class="img-container">
-                                <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title memberName"><b>Dr. Aman Parnami</b></h5>
-                                <p class="card-text memberField">Wearable Computing, Rapid Prototyping Tools, Input and
-                                    Interactions,
-                                    Maker and Design Education</p>
+                        <div class="row">
+                            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card mx-auto" style="width: 18rem; text-align: center; align: center;">
+                                    <div class="img-container">
+                                        <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title memberName"><b>Dr. Aman Parnami</b></h5>
+                                        <p class="card-text memberField">Wearable Computing, Rapid Prototyping Tools,
+                                            Input and
+                                            Interactions,
+                                            Maker and Design Education</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -93,7 +99,7 @@
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card" style="width: 18rem; text-align: center;">
+                                <div class="card mx-auto" style="width: 18rem; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -104,7 +110,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card" style="width: 18rem; text-align: center; align: center;">
+                                <div class="card mx-auto" style="width: 18rem; text-align: center; align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -126,7 +132,7 @@
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card" style="width: 18rem; text-align: center;">
+                                <div class="card mx-auto" style="width: 18rem; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -138,7 +144,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card" style="width: 18rem; text-align: center; align: center;">
+                                <div class="card mx-auto" style="width: 18rem; text-align: center; align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -150,7 +156,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card" style="width: 18rem; text-align: center;">
+                                <div class="card mx-auto" style="width: 18rem; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
