--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,7 @@
 .card {
   background-color: rgba(245, 245, 245, 0) !important;
   border: none !important;
-  width: 18rem;
+  /*width: 18rem;*/
   text-align: center;
   align: center;
 }
@@ -96,8 +96,8 @@
   margin-left: -50px; /* margin is -0.5 * dimension */
   margin-top: -25px;
   color: #F5A623;
-  line-height: 102px;
-  font-size: 100px;
+  line-height: 6vw;
+  font-size: 6vw;
   visibility: visible;
 }
 
@@ -139,10 +139,10 @@
   margin-left: -50px; /* margin is -0.5 * dimension */
   margin-top: -25px;
   /*color: #F5A623;*/
-  line-height: 7rem;
   font-family: 'Lato', sans-serif;
-  color:rgba(0,0,0,0.05);
-  font-size:8rem;
+  color: rgba(0,0,0,0.05);
+  line-height: 8vw;
+  font-size:10vw;
   text-align: center;
   /*font-size: 2rem;*/
 }​
@@ -175,8 +175,8 @@
     margin-left: -50px; /* margin is -0.5 * dimension */
     margin-top: -25px;
     color: #F5A623;
-    line-height: 63px;
-    font-size: 65px;
+    /*line-height: 63px;*/
+    /*font-size: 65px;*/
     visibility: visible;
   }
 
@@ -224,7 +224,7 @@
     top: 40%;
     text-align: center;
     /*display: inline;*/
-    left: 30px%;
+    left: 30%;
     margin: 0 auto;
     margin-left: -50px; /* margin is -0.5 * dimension */
     margin-top: -25px;
@@ -265,8 +265,8 @@
     margin-left: -50px; /* margin is -0.5 * dimension */
     margin-top: -25px;
     color: #F5A623;
-    line-height: 63px;
-    font-size: 65px;
+    /*line-height: 63px;*/
+    /*font-size: 65px;*/
     visibility: hidden;
   }
 
@@ -283,8 +283,8 @@
     visibility: visible;
     margin-top: 10px;
     color: #F5A623;
-    line-height: 25px;
-    font-size: 30px;
+    line-height: 8vw;
+    font-size: 8vw;
     /*margin: 0 auto;*/
   }
 
@@ -319,10 +319,11 @@
     margin-left: -50px; /* margin is -0.5 * dimension */
     margin-top: -25px;
     /*color: #F5A623;*/
-    line-height: 4.5rem;
+
     font-family: 'Lato', sans-serif;
     color:rgba(0,0,0,0.05);
-    font-size:80px;
+    line-height: 18vw;
+    font-size:20vw;
     /*font-size: 2rem;*/
   }​
 
@@ -352,8 +353,8 @@
     margin-left: -50px; /* margin is -0.5 * dimension */
     margin-top: -25px;
     color: #F5A623;
-    line-height: 63px;
-    font-size: 65px;
+    /*line-height: 63px;*/
+    /*font-size: 65px;*/
     visibility: visible;
   }
 
@@ -370,8 +371,8 @@
     visibility: hidden;
     margin-top: 10px;
     color: #F5A623;
-    line-height: 25px;
-    font-size: 30px;
+    line-height: 8vw;
+    font-size: 8vw;
     /*margin: 0 auto;*/
   }
 
@@ -401,15 +402,15 @@
     top: 40%;
     text-align: center;
     /*display: inline;*/
-    left: 30px%;
+    left: 30%;
     margin: 0 auto;
     margin-left: -50px; /* margin is -0.5 * dimension */
     margin-top: -25px;
     /*color: #F5A623;*/
-    line-height: 4.5rem;
     font-family: 'Lato', sans-serif;
     color:rgba(0,0,0,0.05);
-    font-size:80px;
+    line-height: 8vw;
+    font-size:10vw;
     /*font-size: 2rem;*/
   }​
 
