--- a/static/style.css
+++ b/static/style.css
@@ -708,7 +708,7 @@ h1 {
     text-align: center;
     font-size: 2rem;
     width: 100%;
-    letter-spacing: .5rem;
+    /*letter-spacing: .5rem;*/
 }
 
 nav a {
