--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -124,9 +124,8 @@
                         <p>
                             <strong>Deadline: </strong>Ongoing
                         </p>
-                        <h5>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Summer+Intern+(2019)">Apply</a>
-                        </h5>
+                        <a class="btn btn-outline-primary applybtn" href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Summer+Intern+(2019)" target="_blank">Apply
+                        </a>
                     </div>
                     <hr>
                     <div>
@@ -162,9 +161,7 @@
                         <p>
                             <strong>Deadline: </strong>Closed
                         </p>
-                        <h5>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Ph.D.+Student">Apply</a>
-                        </h5>
+                            <a class="btn btn-outline-primary applybtn" href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Ph.D.+Student" target="_blank">Apply</a>
                     </div>
                     <hr>
                     <div>
@@ -195,9 +192,7 @@
                         <p>
                             <strong>Deadline: </strong>January 7, 2019
                         </p>
-                        <h5>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Full+time+Research+Associate">Apply</a>
-                        </h5>
+                            <a class="btn btn-outline-primary applybtn" href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Full+time+Research+Associate" target="_blank">Apply</a>
                     </div>
 
                 </div>
