--- a/templates/team.html
+++ b/templates/team.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
 </head>
@@ -45,7 +45,7 @@
 <section>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="meetDiv">
                     <div class="meetCenter">
                         Meet<br>
@@ -59,23 +59,23 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" style="text-align:center;">
-                <div class="creativeMindsDiv">
-                    <div class="creativeMindsCenter">
-                        Our<br>
-                        Creative<br>
-                        Minds
-                    </div>
-                </div>
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="text-align:center;">
                 <div class="row">
                     <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
                         Adviser
-                        <hr style="border-color: #F5A623;">
+                        <hr style="border-color: #F5A623; width: 50%;">
                     </div>
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 centering">
+                        <div class="creativeMindsDiv">
+                            <div class="creativeMindsCenter">
+                                Our<br>
+                                Creative<br>
+                                Minds
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card mx-auto" style="width: 18rem; text-align: center; align: center;">
+                                <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -94,12 +94,12 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
                         PHDs
-                        <hr style="border-color: #F5A623;">
+                        <hr style="border-color: #F5A623; width: 50%;">
                     </div>
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card mx-auto" style="width: 18rem; text-align: center;">
+                                <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -110,7 +110,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card mx-auto" style="width: 18rem; text-align: center; align: center;">
+                                <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -127,12 +127,12 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
                         Research Assistants (RA)
-                        <hr style="border-color: #F5A623;">
+                        <hr style="border-color: #F5A623; width: 50%;">
                     </div>
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card mx-auto" style="width: 18rem; text-align: center;">
+                                <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -144,7 +144,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card mx-auto" style="width: 18rem; text-align: center; align: center;">
+                                <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
@@ -156,7 +156,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card mx-auto" style="width: 18rem; text-align: center;">
+                                <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
