--- a/templates/team.html
+++ b/templates/team.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
 </head>
@@ -65,6 +65,7 @@
                         Adviser
                         <hr style="border-color: #F5A623; width: 50%;">
                     </div>
+
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 centering">
                         <div class="creativeMindsDiv">
                             <div class="creativeMindsCenter">
@@ -73,14 +74,21 @@
                                 Minds
                             </div>
                         </div>
+                        <div class="creativeMindsSmallDiv">
+                            <div class="creativeMindsSmallCenter">
+                                Our<br>
+                                Creative<br>
+                                Minds
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
+                                <div class="card mx-auto" style="width: 100%; text-align: center; ">
                                     <div class="img-container">
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Dr. Aman Parnami</b></h5>
+                                        <h5 class="card-title memberName"><strong>Dr. Aman Parnami</strong></h5>
                                         <p class="card-text memberField">Wearable Computing, Rapid Prototyping Tools,
                                             Input and
                                             Interactions,
@@ -90,6 +98,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <div class="row">
                     <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
@@ -104,7 +113,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Manideepa Mukherjee</b></h5>
+                                        <h5 class="card-title memberName"><strong>Manideepa Mukherjee</strong></h5>
                                         <p class="card-text memberField">Sensor Design, E-Textile</p>
                                     </div>
                                 </div>
@@ -115,7 +124,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Manshul V. Belani</b></h5>
+                                        <h5 class="card-title memberName"><strong>Manshul V. Belani</strong></h5>
                                         <p class="card-text memberField">HCI, Assistive Technologies, Inclusive
                                             Design</p>
                                     </div>
@@ -137,7 +146,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Deepak Aggrawal</b></h5>
+                                        <h5 class="card-title memberName"><strong>Deepak Aggrawal</strong></h5>
                                         <p class="card-text memberField">Interaction Design, Gestures, AR</p>
                                     </div>
 
@@ -149,7 +158,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Jatin Arora</b></h5>
+                                        <h5 class="card-title memberName"><strong>Jatin Arora</strong></h5>
                                         <p class="card-text memberField">HCI, Construction Toolkits, Novel Input
                                             Modalities</p>
                                     </div>
@@ -161,7 +170,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Piyush Kumar</b></h5>
+                                        <h5 class="card-title memberName"><strong>Piyush Kumar</strong></h5>
                                         <p class="card-text memberField">VR/ AR/ MR along with Wearable Technologies</p>
                                     </div>
                                 </div>
